--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>La reina de la noche (relieve)</h1>
 <p>
-    Texto previo
+    El relieve de Burney (también conocido como el relieve de la Reina de la Noche ) es una placa de terracota mesopotámica en alto relieve del período Isin-Larsa o período babilónico antiguo , que representa una figura alada, desnuda, parecida a una diosa con garras de pájaro, flanqueada por búhos y posada sobre dos leones.
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -20,7 +20,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    El relieve se conserva en el Museo Británico de Londres, que lo ha datado entre 1800 y 1750 a. C. Proviene del sur de Mesopotamia, pero se desconoce el lugar exacto del hallazgo. Con una iconografía distintiva , un alto relieve y un tamaño relativamente grande (49,5 cm de altura), el objeto es un raro vestigio de este período.
 </p>
   </body>
 </html>
